force-app/main/default/objects/Email_Setting_Configurator_Setting__mdt/Email_Setting_Configurator_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Email Setting Configurator Setting</label>
    <pluralLabel>Email Settings Configurator</pluralLabel>
</CustomObject>