force-app/main/default/objects/Email_Setting_Configurator_Setting__mdt/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <label>Application</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ICONICS</fullName>
                <default>true</default>
                <label>ICONICS</label>
            </value>
            <value>
                <fullName>WARDROBING</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>