force-app/main/default/objects/Email_Setting_Configurator_Setting__mdt/fields/Cc_Address_Option__c.field-meta.xml
<CustomField>
    <fullName>Cc_Address_Option__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cc Address Option</label>
    <type>Checkbox</type>
</CustomField>