force-app/main/default/objects/Email_Setting_Configurator_Setting__mdt/fields/Copy_Link_Option__c.field-meta.xml
<CustomField>
    <fullName>Copy_Link_Option__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copy_Link_Option</label>
    <type>Checkbox</type>
</CustomField>