force-app/main/default/objects/Email_Setting_Configurator_Setting__mdt/fields/Download_Preview_Option__c.field-meta.xml
<CustomField>
    <fullName>Download_Preview_Option__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Download Preview Option</label>
    <type>Checkbox</type>
</CustomField>