force-app/main/default/objects/Email_Setting_Configurator_Setting__mdt/fields/Email_Type_Option__c.field-meta.xml
<CustomField>
    <fullName>Email_Type_Option__c</fullName>
    <defaultValue>false</defaultValue>
    <description>In ICONICS app, can choose the type of the email</description>
    <label>Email Type Option</label>
    <type>Checkbox</type>
</CustomField>