force-app/main/default/objects/Email_Setting_Configurator_Setting__mdt/fields/Upload_File_Option__c.field-meta.xml
<CustomField>
    <fullName>Upload_File_Option__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Upload File Option</label>
    <type>Checkbox</type>
</CustomField>